implementing review feedback